--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 main index by andrew <br>
 
-<li><a href="https://www.google.com/">Google.ca</a>
+<li><a href="https://www.google.com/">Google.com</a>
 
 <li><a href="...">..</a>
