--- a/public/index.html
+++ b/public/index.html
@@ -2,4 +2,4 @@ main index by andrew <br>
 
 <li><a href="https://www.google.com/">Google.com</a>
 
-<li><a href="...">..</a>
+<li><a href="https://github.com/hpssjellis/high-schol-javascript-game-dev-assignment-images">Ellis stuff</a>
