--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,13 @@
-main index by andrew <br>
+Main Index By Andrew <br>
 
 <li><a href="https://www.google.com/">Google.com</a>
 
 <li><a href="https://github.com/hpssjellis/high-schol-javascript-game-dev-assignment-images">Ellis stuff</a>
+
+<li><a href="...">..</a>
+
+<li><a href="...">..</a>
+
+<li><a href="...">..</a>
+
+<li><a href="...">..</a>
