--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,7 @@ Main Index By Andrew <br>
 
 <li><a href="https://www.google.com/">Google.com</a>
 
-<li><a href="https://github.com/hpssjellis/high-schol-javascript-game-dev-assignment-images">Ellis stuff</a>
-
-<li><a href="...">..</a>
+<li><a href="https://hpssjellis.github.io/visst2023/public/index.html">jellis website</a>
 
 <li><a href="...">..</a>
 
