--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@ Main Index By Andrew <br>
 
 <li><a href="https://snare555.github.io/VISST2023/public/">GitHub page</a>
 
-<li><a href="...">..</a>
+<li><a href="https://hpssjellis.github.io/tinyMLjs/public/index.html">Motion assignment</a>
 
 <li><a href="...">..</a>
