--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@ Main Index By Andrew <br>
 
 <li><a href="https://hpssjellis.github.io/visst2023/public/index.html">Ellis website</a>
 
-<li><a href="https://snare555.github.io/VISST2023/public/">GitHub page</a>
+<li><a href="https://github.com/snare555">GitHub page</a>
 
 <li><a href="https://hpssjellis.github.io/tinyMLjs/public/index.html">Motion assignment</a>
 
-<li><a href="...">..</a>
+
