--- a/public/simplejs.html
+++ b/public/simplejs.html
@@ -1,1 +1,6 @@
-
+<input type="text" value="Hi" id="myText">
+<div id=myDiv>...</div>
+<input type="button" value="in-out" onClick="{
+  myValue=document.getElementById('myText').value
+  document.getElementById('myDiv').innerHTML=myValue
+  }">
