--- a/public/index.html
+++ b/public/index.html
@@ -8,4 +8,4 @@ Main Index By Andrew <br>
 
 <li><a href="https://hpssjellis.github.io/tinyMLjs/public/index.html">Motion assignment</a>
 
-
+<li><a href="simplejs.html">simplejs.html</a>
