--- a/public/index.html
+++ b/public/index.html
@@ -9,3 +9,5 @@ Main Index By Andrew <br>
 <li><a href="https://hpssjellis.github.io/tinyMLjs/public/index.html">Motion assignment</a>
 
 <li><a href="simplejs.html">simplejs.html</a>
+
+<li><a href="broswer">browser</a>
