--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@ Main index by Andrew
 
 <li><a href="https://github.com/hpssjellis/high-schol-javascript-game-dev-assignment-images">Ellis stuff</a>
 
-<li><a href="">Google.com</a>
+<li><a href="https://github.com/snare555">My Github page</a>
 
-<li><a href="">Ellis stuff</a>
+<li><a href="simplejs.html">Simplejs.html</a>
+
+<li><a href="https://hpssjellis.github.io/tinyMLjs/public/index.html">Motion assignment</a>
+
+<li><a href="browser">broswer</a>
