--- a/public/index.html
+++ b/public/index.html
@@ -10,3 +10,5 @@ Main index by Andrew
 <li><a href="https://hpssjellis.github.io/tinyMLjs/public/index.html">Motion assignment</a>
 
 <li><a href="browser">broswer</a>
+
+<li><a href="browser2">broswer2</a>
