--- a/public/index.html
+++ b/public/index.html
@@ -12,3 +12,5 @@ Main index by Andrew
 <li><a href="browser">broswer</a>
 
 <li><a href="browser2">broswer2</a>
+
+<li><a href="browser3">broswer3</a>
