--- a/public/index.html
+++ b/public/index.html
@@ -14,3 +14,5 @@ Main index by Andrew
 <li><a href="browser2">broswer2</a>
 
 <li><a href="browser3">broswer3</a>
+
+<li><a href="Hugchat.html">Hug Chat</a>
