--- a/public/index.html
+++ b/public/index.html
@@ -16,3 +16,5 @@ Main index by Andrew
 <li><a href="browser3">broswer3</a>
 
 <li><a href="Hugchat.html">Hug Chat</a>
+
+<li><a href="Hugchat1.html">Hug Chat 1</a>
