--- a/public/index.html
+++ b/public/index.html
@@ -18,3 +18,5 @@ Main index by Andrew
 <li><a href="Hugchat.html">Hug Chat</a>
 
 <li><a href="Hugchat1.html">Hug Chat 1</a>
+
+<li><a href="Hugchat9.html">Hug Chat 9</a>
