--- a/public/index.html
+++ b/public/index.html
@@ -20,3 +20,5 @@ Main index by Andrew
 <li><a href="Hugchat1.html">Hug Chat 1</a>
 
 <li><a href="Hugchat9.html">Hug Chat 9</a>
+
+<li><a href="Hugchat9-1.html">Hug Chat 9-1</a>
