--- a/public/index.html
+++ b/public/index.html
@@ -22,3 +22,8 @@ Main index by Andrew
 <li><a href="Hugchat9.html">Hug Chat 9</a>
 
 <li><a href="Hugchat9-1.html">Hug Chat 9-1</a>
+
+<li><a href="Hugchat9-2.html">Hug Chat 9-2</a>
+
+
+
