--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,8 @@ Main index by Andrew
 
 <li><a href="Hugchat9-2.html">Hug Chat 9-2</a>
 
+<li><a href="Hugchat11.html">Hug Chat 11</a>
+
 <li><a href="Hugchat15.html">Hug Chat 15</a>
 
 
