--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@ Main index by Andrew
 <li><a href="Hugchat9-1.html">Hug Chat 9-1</a>
 
 <li><a href="Hugchat9-2.html">Hug Chat 9-2</a>
-
+  
+<li><a href="Hugchat10.html">Hug Chat 10</a>
+  
 <li><a href="Hugchat11.html">Hug Chat 11</a>
 
 <li><a href="Hugchat15.html">Hug Chat 15</a>
