--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,8 @@ Main index by Andrew
   
 <li><a href="Hugchat11.html">Hug Chat 11</a>
 
+<li><a href="Hugchat12.html">Hug Chat 12</a>
+
 <li><a href="Hugchat15.html">Hug Chat 15</a>
 
 
