--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,8 @@ Main index by Andrew
 
 <li><a href="Hugchat12.html">Hug Chat 12</a>
 
+<li><a href="Hugchat13.html">Hug Chat 13</a>
+
 <li><a href="Hugchat15.html">Hug Chat 15</a>
 
 
