--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,8 @@ Main index by Andrew
 
 <li><a href="Hugchat13.html">Hug Chat 13</a>
 
+<li><a href="Hugchat13b.html">Hug Chat 13b</a>
+
 <li><a href="Hugchat15.html">Hug Chat 15</a>
 
 
