--- a/public/Hugchat11.html
+++ b/public/Hugchat11.html
@@ -1,266 +1,146 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.1.0/showdown.js"></script> 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Everyday Use Quilt</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(2, 200px);
+      grid-gap: 20px;
+    }
+    .card {
+      perspective: 1000px;
+      width: 200px;
+      height: 200px;
+    }
+    .card-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+      cursor: pointer;
+    }
+    .card.flipped .card-inner {
+      transform: rotateY(180deg);
+    }
+    .card-front, .card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      text-align: center;
+      font-size: 16px;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+    .card-back {
+      background-color: #333;
+      color: #fff;
+      transform: rotateY(180deg);
+    }
+    /* Specific card colours */
+    .blue { background-color: #3498db; }
+    .green { background-color: #2ecc71; }
+    .yellow { background-color: #f1c40f; color: black; }
+    .purple { background-color: #9b59b6; }
+    svg {
+      width: 80px;
+      height: 80px;
+    }
+  </style>
+</head>
+<body>
+  <div class="grid-container">
+    <!-- Card 1: Heritage and Tradition (Blue) -->
+    <div class="card blue" onclick="flipCard(this)">
+      <div class="card-inner">
+        <div class="card-front">
+          <!-- Simple SVG quilt drawing -->
+          <svg viewBox="0 0 64 64">
+            <rect x="8" y="8" width="48" height="48" fill="#2980b9" stroke="white" stroke-width="2"/>
+            <line x1="8" y1="24" x2="56" y2="24" stroke="white" stroke-width="2"/>
+            <line x1="8" y1="40" x2="56" y2="40" stroke="white" stroke-width="2"/>
+            <line x1="24" y1="8" x2="24" y2="56" stroke="white" stroke-width="2"/>
+            <line x1="40" y1="8" x2="40" y2="56" stroke="white" stroke-width="2"/>
+          </svg>
+        </div>
+        <div class="card-back">
+          Heritage is meant to be lived and appreciated, not just displayed.
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 2: Identity and Name (Green) -->
+    <div class="card green" onclick="flipCard(this)">
+      <div class="card-inner">
+        <div class="card-front">
+          <!-- Simple SVG name tag drawing -->
+          <svg viewBox="0 0 64 64">
+            <rect x="16" y="20" width="32" height="24" fill="#27ae60" stroke="white" stroke-width="2"/>
+            <polygon points="32,8 20,20 44,20" fill="#2ecc71" stroke="white" stroke-width="2"/>
+          </svg>
+        </div>
+        <div class="card-back">
+          Dee rejects her given name, but Mama knows identity is rooted in family history.
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 3: The Value of Everyday Items (Yellow) -->
+    <div class="card yellow" onclick="flipCard(this)">
+      <div class="card-inner">
+        <div class="card-front">
+          <!-- Simple SVG quilt piece drawing -->
+          <svg viewBox="0 0 64 64">
+            <rect x="12" y="12" width="40" height="40" fill="#f39c12" stroke="black" stroke-width="2"/>
+            <line x1="12" y1="32" x2="52" y2="32" stroke="black" stroke-width="2"/>
+            <line x1="32" y1="12" x2="32" y2="52" stroke="black" stroke-width="2"/>
+          </svg>
+        </div>
+        <div class="card-back">
+          Maggie understands that everyday items hold real meaning through use.
+        </div>
+      </div>
+    </div>
+
+    <!-- Card 4: Family and Generational Differences (Light Purple) -->
+    <div class="card purple" onclick="flipCard(this)">
+      <div class="card-inner">
+        <div class="card-front">
+          <!-- Simple SVG family icon drawing -->
+          <svg viewBox="0 0 64 64">
+            <circle cx="20" cy="30" r="8" fill="#8e44ad" stroke="white" stroke-width="2"/>
+            <circle cx="44" cy="30" r="8" fill="#8e44ad" stroke="white" stroke-width="2"/>
+            <circle cx="32" cy="45" r="6" fill="#8e44ad" stroke="white" stroke-width="2"/>
+          </svg>
+        </div>
+        <div class="card-back">
+          Mama sees the true value of heritage in Maggie’s quiet appreciation.
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    function flipCard(cardElement) {
+      cardElement.classList.toggle('flipped');
+    }
+  </script>
+</body>
+</html>
 
-v0.1.1-5<br>
-
-testing converting markdown exported from the model to html for the webpage
-
-<input type=button value=convert onClick="{
-     const converter = new showdown.Converter();
-      const htmlOutput = converter.makeHtml(document.getElementById('myOutput').textContent);
-//let converter = new showdown.Converter()
-//let   myHtml      = converter.makeHtml('# hello, markdown!')
-//let   myMd        = converter.makeMd('<a href=\'https://patreon.com/showdownjs\'>Please Support us!</a>');
-console.log(htmlOutput )
-//console.log(myMd)
-}">
-<br>
-<br>
-
-<input type=button value=Big onClick="{
-
-let converter = new showdown.Converter()
-document.getElementById('myOutput').innerHTML    = converter.makeHtml(document.getElementById('myOutput').textContent)
-
-}">
-<br>
-<br>
-
-
-
-Output: <span id="myOutput">---
-
-# h1 Heading 8-)
-## h2 Heading
-### h3 Heading
-#### h4 Heading
-##### h5 Heading
-###### h6 Heading
-
-
-## Horizontal Rules
-
-___
-
----
-
-***
-
-
-## Typographic replacements
-
-Enable typographer option to see result.
-
-(c) (C) (r) (R) (tm) (TM) (p) (P) +-
-
-test.. test... test..... test?..... test!....
-
-!!!!!! ???? ,,  -- ---
-
-"Smartypants, double quotes" and 'single quotes'
-
-
-## Emphasis
-
-**This is bold text**
-
-__This is bold text__
-
-*This is italic text*
-
-_This is italic text_
-
-~~Strikethrough~~
-
-
-## Blockquotes
-
-
-> Blockquotes can also be nested...
->> ...by using additional greater-than signs right next to each other...
-> > > ...or with spaces between arrows.
-
-
-## Lists
-
-Unordered
-
-+ Create a list by starting a line with `+`, `-`, or `*`
-+ Sub-lists are made by indenting 2 spaces:
-  - Marker character change forces new list start:
-    * Ac tristique libero volutpat at
-    + Facilisis in pretium nisl aliquet
-    - Nulla volutpat aliquam velit
-+ Very easy!
-
-Ordered
-
-1. Lorem ipsum dolor sit amet
-2. Consectetur adipiscing elit
-3. Integer molestie lorem at massa
-
-
-1. You can use sequential numbers...
-1. ...or keep all the numbers as `1.`
-
-Start numbering with offset:
-
-57. foo
-1. bar
-
-
-## Code
-
-Inline `code`
-
-Indented code
-
-    // Some comments
-    line 1 of code
-    line 2 of code
-    line 3 of code
-
-
-Block code "fences"
-
-```
-Sample text here...
-```
-
-Syntax highlighting
-
-``` js
-var foo = function (bar) {
-  return bar++;
-};
-
-console.log(foo(5));
-```
-
-## Tables
-
-| Option | Description |
-| ------ | ----------- |
-| data   | path to data files to supply the data that will be passed into templates. |
-| engine | engine to be used for processing templates. Handlebars is the default. |
-| ext    | extension to be used for dest files. |
-
-Right aligned columns
-
-| Option | Description |
-| ------:| -----------:|
-| data   | path to data files to supply the data that will be passed into templates. |
-| engine | engine to be used for processing templates. Handlebars is the default. |
-| ext    | extension to be used for dest files. |
-
-
-## Links
-
-[link text](http://dev.nodeca.com)
-
-[link with title](http://nodeca.github.io/pica/demo/ "title text!")
-
-Autoconverted link https://github.com/nodeca/pica (enable linkify to see)
-
-
-## Images
-
-![Minion](https://octodex.github.com/images/minion.png)
-![Stormtroopocat](https://octodex.github.com/images/stormtroopocat.jpg "The Stormtroopocat")
-
-Like links, Images also have a footnote style syntax
-
-![Alt text][id]
-
-With a reference later in the document defining the URL location:
-
-[id]: https://octodex.github.com/images/dojocat.jpg  "The Dojocat"
-
-
-## Plugins
-
-The killer feature of `markdown-it` is very effective support of
-[syntax plugins](https://www.npmjs.org/browse/keyword/markdown-it-plugin).
-
-
-### [Emojies](https://github.com/markdown-it/markdown-it-emoji)
-
-> Classic markup: :wink: :crush: :cry: :tear: :laughing: :yum:
->
-> Shortcuts (emoticons): :-) :-( 8-) ;)
-
-see [how to change output](https://github.com/markdown-it/markdown-it-emoji#change-output) with twemoji.
-
-
-### [Subscript](https://github.com/markdown-it/markdown-it-sub) / [Superscript](https://github.com/markdown-it/markdown-it-sup)
-
-- 19^th^
-- H~2~O
-
-
-### [\<ins>](https://github.com/markdown-it/markdown-it-ins)
-
-++Inserted text++
-
-
-### [\<mark>](https://github.com/markdown-it/markdown-it-mark)
-
-==Marked text==
-
-
-### [Footnotes](https://github.com/markdown-it/markdown-it-footnote)
-
-Footnote 1 link[^first].
-
-Footnote 2 link[^second].
-
-Inline footnote^[Text of inline footnote] definition.
-
-Duplicated footnote reference[^second].
-
-[^first]: Footnote **can have markup**
-
-    and multiple paragraphs.
-
-[^second]: Footnote text.
-
-
-### [Definition lists](https://github.com/markdown-it/markdown-it-deflist)
-
-Term 1
-
-:   Definition 1
-with lazy continuation.
-
-Term 2 with *inline markup*
-
-:   Definition 2
-
-        { some code, part of Definition 2 }
-
-    Third paragraph of definition 2.
-
-_Compact style:_
-
-Term 1
-  ~ Definition 1
-
-Term 2
-  ~ Definition 2a
-  ~ Definition 2b
-
-
-### [Abbreviations](https://github.com/markdown-it/markdown-it-abbr)
-
-This is HTML abbreviation example.
-
-It converts "HTML", but keep intact partial entries like "xxxHTMLyyy" and so on.
-
-*[HTML]: Hyper Text Markup Language
-
-### [Custom containers](https://github.com/markdown-it/markdown-it-container)
-
-::: warning
-*here be dragons*
-:::
-
-</span> <br>
