--- a/public/quilt.html
+++ b/public/quilt.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Everyday Use Quilt</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f5f5f5;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    .grid-container {
+      display: grid;
+      grid-template-columns: repeat(2, 200px);
+      grid-gap: 20px;
+    }
+    .card {
+      perspective: 1000px;
+      width: 200px;
+      height: 200px;
+    }
+    .card-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      transition: transform 0.6s;
+      transform-style: preserve-3d;
+      cursor: pointer;
+    }
+    .card.flipped .card-inner {
+      transform: rotateY(180deg);
+    }
+    .card-front, .card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      backface-visibility: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 10px;
+      text-align: center;
+      font-size: 16px;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+    .card-back {
+      background-color: #333;
+      color: #fff;
+      transform: rotateY(180deg);
+    }
+    /* Specific card colours */
+    .blue { background-color: #3498db; }
+    .green { background-color: #2ecc71; }
+    .yellow { background-color: #f1c40f; color: black; }
+    .purple { background-color: #9b59b6; }
+    svg {
+      width: 80px;
+      height: 80px;
+    }
+  </style>
+</head>
+<body>
+  <div class="grid-container">
+    <!-- Card 1: Heritage and Tradition (Blue) -->
+    <div class="card blue" onclick="flipCard(this)">
+      <div class="card-inner">
+        <div class="card-fr
 
